[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/UI_Square.png" type="Texture" id=1]
[ext_resource path="res://Font/roboto-bold.tres" type="DynamicFont" id=2]
[ext_resource path="res://Font/roboto-regular.tres" type="DynamicFont" id=3]
[ext_resource path="res://UI.gd" type="Script" id=4]
[ext_resource path="res://default_theme.tres" type="Theme" id=5]

[node name="UI" type="Control"]
script = ExtResource( 4 )

[node name="BG" type="TextureRect" parent="."]
modulate = Color( 0.541176, 0.541176, 0.541176, 1 )
self_modulate = Color( 0.278431, 0.278431, 0.278431, 1 )
margin_right = 250.0
margin_bottom = 60.0
texture = ExtResource( 1 )
expand = true

[node name="LevelBG" type="TextureRect" parent="BG"]
margin_left = 6.0
margin_top = 6.0
margin_right = 57.0
margin_bottom = 54.0
texture = ExtResource( 1 )
expand = true

[node name="LevelText" type="Label" parent="BG/LevelBG"]
modulate = Color( 0.341176, 0.109804, 0.109804, 1 )
margin_right = 50.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 2 )
text = "1"
align = 1
valign = 1

[node name="HealthBar" type="TextureProgress" parent="BG"]
margin_left = 61.0
margin_top = 22.0
margin_right = 245.0
margin_bottom = 32.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 1 )
tint_under = Color( 0.376471, 0.376471, 0.376471, 1 )
tint_progress = Color( 0.388235, 0.917647, 0.423529, 1 )
nine_patch_stretch = true

[node name="Label" type="Label" parent="BG/HealthBar"]
margin_left = -1.0
margin_top = -1.0
margin_right = 39.0
margin_bottom = 13.0
text = "HP"

[node name="XpBar" type="TextureProgress" parent="BG"]
margin_left = 60.0
margin_top = 8.0
margin_right = 245.0
margin_bottom = 19.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 1 )
tint_under = Color( 0.4, 0.4, 0.4, 1 )
tint_progress = Color( 0.34902, 0.972549, 0.341176, 1 )
nine_patch_stretch = true

[node name="Label" type="Label" parent="BG/XpBar"]
margin_right = 40.0
margin_bottom = 14.0
text = "XP"

[node name="TargetHealthBar" type="TextureProgress" parent="BG"]
margin_left = 61.0
margin_top = 36.0
margin_right = 208.0
margin_bottom = 53.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 1 )
tint_under = Color( 0.443137, 0.431373, 0.431373, 1 )
tint_progress = Color( 0.92549, 0.243137, 0.243137, 1 )
nine_patch_stretch = true

[node name="Label" type="Label" parent="BG/TargetHealthBar"]
margin_top = 1.0
margin_right = 40.0
margin_bottom = 15.0
text = "Target"

[node name="GoldText" type="Label" parent="BG"]
self_modulate = Color( 0.976471, 0.956863, 0.0235294, 1 )
margin_left = 210.0
margin_top = 35.0
margin_right = 245.0
margin_bottom = 57.0
custom_fonts/font = ExtResource( 3 )
align = 1

[node name="DamageDone" type="Label" parent="BG"]
self_modulate = Color( 1, 0.882353, 0.258824, 1 )
margin_left = 188.0
margin_top = -46.0
margin_right = 249.0
margin_bottom = -4.0
custom_fonts/font = ExtResource( 2 )

[node name="DamageTaken" type="Label" parent="BG"]
self_modulate = Color( 1, 0.278431, 0.278431, 1 )
margin_left = 2.0
margin_top = -45.0
margin_right = 63.0
margin_bottom = -2.0
custom_fonts/font = ExtResource( 2 )

[node name="LoadScreen" type="TextureRect" parent="."]
visible = false
self_modulate = Color( 0, 0, 0, 1 )
margin_top = -551.0
margin_right = 1119.0
margin_bottom = 68.0
texture = ExtResource( 1 )
expand = true

[node name="Label" type="Label" parent="LoadScreen"]
margin_left = 39.0
margin_top = 372.0
margin_right = 128.0
margin_bottom = 412.0
rect_scale = Vector2( 5, 5 )
text = "Loading..."
align = 1
valign = 1

[node name="TitleScreen" type="TextureRect" parent="."]
visible = false
self_modulate = Color( 0, 0, 0, 1 )
margin_top = -551.0
margin_right = 1119.0
margin_bottom = 68.0
theme = ExtResource( 5 )
texture = ExtResource( 1 )
expand = true

[node name="Title" type="Label" parent="TitleScreen"]
margin_left = 47.0
margin_top = 59.0
margin_right = 136.0
margin_bottom = 99.0
rect_scale = Vector2( 5, 5 )
text = "Game Title"
align = 1
valign = 1

[node name="ButtonRandom" type="Button" parent="TitleScreen"]
margin_left = 109.0
margin_top = 345.0
margin_right = 210.0
margin_bottom = 396.0
text = "Random"

[node name="SelectModeText" type="Label" parent="TitleScreen"]
margin_left = 124.0
margin_top = 277.0
margin_right = 207.0
margin_bottom = 295.0
rect_scale = Vector2( 2, 2 )
text = "Select Mode:"
align = 1
valign = 1

[node name="NormalButton" type="Button" parent="TitleScreen"]
margin_left = 222.0
margin_top = 346.0
margin_right = 318.0
margin_bottom = 396.0
text = "Normal"

[node name="StoryText" type="TextureRect" parent="."]
modulate = Color( 0.541176, 0.541176, 0.541176, 1 )
self_modulate = Color( 0.278431, 0.278431, 0.278431, 1 )
margin_left = 451.0
margin_top = -81.0
margin_right = 593.0
margin_bottom = -46.0
theme = ExtResource( 5 )
texture = ExtResource( 1 )
expand = true

[node name="RichTextLabel" type="RichTextLabel" parent="StoryText"]
anchor_right = 2.0
margin_top = 6.0
margin_right = -142.0
margin_bottom = 28.0
theme = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "[center][shake rate=5 level=10]no way out[/shake][/center]"
text = "no way out"
scroll_active = false
scroll_following = true

[connection signal="pressed" from="TitleScreen/ButtonRandom" to="." method="_on_ButtonRandom_pressed"]
[connection signal="pressed" from="TitleScreen/NormalButton" to="." method="_on_NormalButton_pressed"]
